--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -32,15 +32,20 @@ footer a {
   position: relative;
 }
 
+.image-small {
+  width: 100px;
+  height: 100px;
+}
+
 .header-container img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 20%;
 }
 
 .header-container h1 {
   position: absolute;
-  top: 20%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -49,7 +54,7 @@ footer a {
 
 .header-container h2 {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
